# cmake-tutorials

./: .gitignore  LICENSE  README.md
1-BasicProject/: BasicProject.md  CMakeLists.txt  main.cpp  run.sh
2-VariablesAndMessages/: CMakeLists.txt  VariablesAndMessages.md  run.sh
2.5-Lists/: CMakeLists.txt  README.md
2.5-Lists/Regex/: CMakeLists.txt
3-DirectoryManagement/: CMakeLists.txt  README.md  cool_functions.cmake
3-DirectoryManagement/SubProject/: CMakeLists.txt
4-Conditionals/: CMakeLists.txt  README.md
5-Loops/: CMakeLists.txt  README.md
6-ExecutablesAndLibraries/: README.md
6-FunctionsAndMacros/: CMakeLists.txt  README.md
6-FunctionsAndMacros/Parsing/: CMakeLists.txt
6-FunctionsAndMacros/Returning/: CMakeLists.txt
6-FunctionsAndMacros/Scoping/: CMakeLists.txt  real_function.cmake
7-ExecutablesAndLibraries/: CMakeLists.txt  README.md  my_library.cpp  my_library.h  run.sh
7-ExecutablesAndLibraries/LibraryVersusNoLibrary/: README.md
